# glance

./: .gitignore  CONTEXT.md  LICENSE  README.md  icon-lab.html  icon-lab2.html  icon-lab3.html  icon-lab4.html  icon-lab5.html  index.html  manifest.webmanifest  sw.js
.github/workflows/: release.yml
sample/: index.md
sample/notes/: deep.md
scripts/: generate-icons.mjs  vendor.mjs
src/: favicon.js  files.js  find.js  folder.js  icons.js  main.js  pipeline.js  platform.js  theme.js
src-tauri/: .gitignore  Cargo.toml  build-web.mjs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: [email protected]  icon.icns
src-tauri/src/: lib.rs  main.rs
styles/: app.css
