[package]
name = "glance"
version = "0.1.0"
description = "A fast, fluid markdown viewer & quick editor"
authors = ["Samuel"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "glance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
